moved and renamed and capitalized

--- a/projects/Iscout Better source/2016.md
+++ b/projects/Iscout Better source/2016.md
@@ -106,8 +106,9 @@ Google: mac command key symbol
 Google: mac command key symbol
 
 ### Source improvement
+
 <https://www.gearpatrol.com/tech/a714999/apple-command-key-explained/>
-they were looking for `sweden` where the symbol is used to indicate tourist atractions
+they were looking for `sweden` where the symbol is used to indicate tourist atractions.
 
 ---
 
@@ -126,6 +127,7 @@ Dit oleaat past ergens in dit kaartfragment, in een mooie, kleine tuin. Gebruik 
 We gaan naar het einde van de lijn waar de x bij staat.
 
 ### English Question
+
 <http://os01.iscoutgame.com/game-2016/question/oleaat.png>
 This overlay fits on this piece of the map, somewhere in a small, nice garden. Use the satelliet view. <https://goo.gl/maps/QbWwyE3fvfx>
 We go to the end of the line where the x is located.
@@ -160,6 +162,7 @@ This hill named after a cemetery for a specific nationality is the location of o
 Lombard Street is located on Russian Hill. That is one of the tourist attractions of San Francisco and one of the most famous streets in the world. The hill is named after a Russian cemetery from the time when Russian merchant ships came there regularly.
 
 ### Source improvement
+
 <https://www.google.nl/search?hl=nl&q=famous+street+on+russian+hill>
 
 It is clearly stated on the [Wikipedia page](https://en.wikipedia.org/wiki/Russian_Hill,_San_Francisco#:~:text=The%20neighborhood%20is%20most%20famous,crookedest%20street%20in%20the%20world%22.)
@@ -184,6 +187,7 @@ why is the English question so much harder?
 The dots in the image represent locations named batman.
 
 ### Source improvement
+
 <https://geotargit.com/called.php?qcity=Batman>
 
 there are now a bit more things called batman
@@ -196,9 +200,9 @@ The 4 places pictured are:
 - [Division of Batman](https://en.wikipedia.org/wiki/Division_of_Batman) a former Australian Electoral Division (now replaced by the Division of Cooper)
 - [Batman, Tunceli](https://en.wikipedia.org/wiki/Batman,_Tunceli) village in turkey
 - [Batman, Turkey](https://en.wikipedia.org/wiki/Batman,_Turkey) a big city in turkey not 321km from the village
-- and mostlily [Batman, Iran](https://en.wikipedia.org/wiki/Batman,_Iran)
+- And most likely [Batman, Iran](https://en.wikipedia.org/wiki/Batman,_Iran)
 
-with batman turkey being the right awnser
+with batman turkey being the right awnser.
 
 ---
 
@@ -247,6 +251,7 @@ Google unicorn poop soya milk riots
 [http://nos.nl/op3/artikel/2059915-menigte-valt-te-duur-londens-cornflakescafe-binnen.html](http://nos.nl/op3/artikel/2059915-menigte-valt-te-duur-londens-cornflakescafe-binnen.html)
 
 ### Source improvement
+
 <https://en.wikipedia.org/wiki/Cereal_Killer_Cafe>
 
 The cafe is now closed.
