Add automatic template generation

--- a/Journal/Daily/2024-06-17.md
+++ b/Journal/Daily/2024-06-17.md
@@ -1,3 +1,11 @@
+---
+tags:
+  - Journal
+created: 2024-06-17
+auteur:
+  - ChatGPT 4-o
+  - me
+---
 ### Daily Evening Journal
 
 **Date:** 2024-06-17
@@ -13,8 +21,8 @@ tiredness could be the result of staying up late.
 The unfulfilledness is threefold.
 
 - I could not finish my work today because I kept running into bugs
-- My protograity project of the oude gracht in utrecht did not work
-	- it turns out you need quality photos instead of video
+- My photogrammetry project of the oude gracht in Utrecht did not work
+    - it turns out you need quality photos instead of video
 - did little other things today
 
 **3. One thing I'm proud of today:**  
@@ -27,6 +35,7 @@ I told my fellow scout leader I wanted to go to a festival, so I told them I wan
 
 **5. Something I learned or realized today:**  
 _Note any insights or lessons._
+
 - without tests, anything will become broken.
 - I can take a break from scouting
 - scalpers will sell tickets for 100 euros over MSRP
