--- a/projects/Iscout Better source/2016.md
+++ b/projects/Iscout Better source/2016.md
@@ -339,7 +339,7 @@ The thing you did last year as hipster can be mainstream already. Sometimes you'
 
 they were looking for the `STEÐJI BREWERY` witch is now closed.
 
-Ive removed it from osm
+I've removed it from osm.
 
 ---
 
@@ -358,12 +358,12 @@ Its the flag
 
 ### Source improvement
 
-## note
+## Note
 
 did you know `Wow. tuocsi is the reverse of iscout!!!!1!` source: <https://tuoc.si/>
 
 the short link redirects to
 <http://four.flash-gear.com/npuz/puz.php?c=f&o=1&id=3981605&k=39072282&s=60&w=500&h=300>
-witch has been lost to time
+which has been lost to time
 
 ---
