--- a/Journal/Daily/2024-06-18.md
+++ b/Journal/Daily/2024-06-18.md
@@ -3,18 +3,23 @@ tags:
   - Journal
 created: 2024-06-18
 auteur:
-  - ChatGPT 4-o
   - me
+  - ChatGPT 4-o
 ---
 
 # Journal entry for 2024-06-18
 
-**What did you have for dinner?**: 
-**Grade for the day**: 
+**What did you have for dinner?**: Food from food trucks at the company party (pulled chicken, sloppy joes)
+**Grade for the day**: 4
 
 ## Summary of yesterday's entry
 
-Yesterday, I felt tired and unfulfilled due to staying up late and an accumulation of work-related frustrations. My unfulfilled feeling stemmed from three main issues: persistent bugs preventing me from completing my tasks, a failed photogrammetry project due to using video instead of quality photos, and lack of significant achievements throughout the day. However, I took pride in the number of bugs I identified and fixed. A notable challenge was communicating my desire to attend a festival to my fellow scout leader, who agreed to manage in my absence. I realized the importance of thorough testing, my ability to take breaks from commitments, and observed the inflated prices by scalpers. I am looking forward to completing my ticket and refining my journal system with automatic templates tomorrow.
+Yesterday, I felt tired and unfulfilled due to staying up late and an accumulation of work-related frustrations. My unfulfilled feelings stemmed from three main issues:
+- persistent bugs preventing me from completing my tasks
+- a failed photogrammetry project due to using video instead of quality photos
+- lack of significant achievements throughout the day
+However, I took pride in the number of bugs I identified and fixed. A notable challenge was communicating my desire to attend a festival to my fellow scout leaders, who agreed they could manage in my absence. I realized the importance of thorough testing. I can take breaks from commitments, and I have observed the inflated prices of scalpers.
+I look forward to completing my ticket and refining my journal system with automatic templates tomorrow.
 
 **Action Items for Tomorrow:**
 1. Finish the work ticket.
@@ -28,23 +33,64 @@ Yesterday, I felt tired and unfulfilled due to staying up late and an accumulati
 1. **Feelings Awareness:**
    - How did I feel today? Were there moments of feeling particularly good or bad?
    - Were there any specific triggers that influenced these feelings?
+I felt terrible today. I felt useless because I could not find the motivation to work. Or, more accurately, I found another thing more interesting. 
+
+After completing the task, I felt nothing, no joy or pride, which is a bit concerning.
 
 2. **Pride in Accomplishments:**
    - What am I proud of accomplishing today? What small or big victories can I celebrate?
-   - Did I fix any bugs, complete tasks, or face challenges head-on?
+   - Did I fix bugs, complete tasks, or face challenges head-on?
+
+I continued building this journaling system. which I put tougher in the morning. 
+I used years of skills to pull this off. 
+I can be proud that I can make something I want.
 
 3. **Balancing Selflessness and Self-Interest:**
-   - Did I make decisions for myself today, prioritizing my own needs without guilt?
+   - Did I make decisions today, prioritizing my needs without guilt?
    - Was there a moment where I felt I was successfully balancing self-care and self-giving?
    - How did I communicate my wants or needs to others today? 
 
+I did most of the communication in the evening, but there was no give-and-take.
+
+I did take something in creating the journal system in the morning during company time.
+
 4. **Meaningful Activities:**
    - What did I do today that felt worthwhile or fulfilling?
-   - Did I make progress on my work ticket, journal system, or photogrammetry project?
+   - Did I progress on my work ticket, journal system, or photogrammetry project?
+
+I built the journal system, for which I will get a few days of enjoyment. 
+Which is another problem: how do I make this a habit instead of an action
+
+The work ticket is also ready for review.
+The photogrammetry project is not worth further pursuing.
+
+The preparations for the `12 uurs race` continue, with me providing more information about the race and the split of which children go in what boat.
 
 5. **Lessons Learned:**
    - What did I learn today, either from successes or challenges?
-   - Is there something that didn't go as planned, and if so, what can I take away from that experience?
+   - Is there something that didn't go as planned, and what can I take away from that experience?
 
-6. **Looking Ahead:**
-   - How can I better manage
+One of the key takeaways from today was learning how to use the open API, a skill that I found to be quite straightforward. I'm excited to apply this newfound knowledge to future projects, which I believe will significantly enhance my productivity and efficiency.
+
+At the company party, I learned more about traffic lights than I ever wanted to know.
+
+
+**6. Looking Ahead:**
+- How can I better manage my time and energy tomorrow?
+- What tasks or goals do I want to prioritize?
+- Are there any potential challenges I foresee, and how can I prepare for them?
+- What can I do tomorrow to have moments of joy or relaxation?
+
+Tomorrow should not be about coding. I have a design task ahead of me, which is the most important thing.
+
+I do, however, have to post the PR for my previous task, but I can give it to my senior because he is paid to review my code.
+
+And then I have a presentation about design systems to attend in the evening so there is little time to relax.
+
+I should consider what I want to do next as a big project.
+
+One of the things on the horizon is summer camp, where I must arrange for quiduage.
+
+## note for tomorrow
+
+Add a question about how I like the new system, collecting feedback on what to change.
