made my journal

--- a/Journal/Daily/2024-06-19.md
+++ b/Journal/Daily/2024-06-19.md
@@ -9,39 +9,72 @@ auteur:
 
 # Journal entry for 2024-06-19
 
-**What did you have for dinner?**: 
-**Grade for the day**: 
+**What did you have for dinner?**: pancakes with bacon
+**Grade for the day**: 7
+
+## What did you do today?
+
+**Morning**: Making PR, made the threeway connections
+**Afternoon**: Mom user test, call with the colleague
+**After work**: worked on llm story writer
+**Evening**: gamed with friends
 
 ## Summary of yesterday's entry
 
-Yesterday, I felt tired and unfulfilled due to late nights and ongoing work frustrations, primarily caused by persistent bugs, a failed photogrammetry project, and a lack of significant achievements. Despite this, I identified and fixed several bugs and managed to communicate my desire to attend a festival with fellow scout leaders, who agreed to cover for me. I noticed the importance of thorough testing, recognized that taking breaks from commitments could be beneficial, and observed the inflated prices of scalpers. Moving forward, I plan to complete my work ticket, refine my journal system with automatic templates, and ensure I take quality photos for the photogrammetry project.
-
-**Action Items for Tomorrow:**
-1. Finish the work ticket.
-2. Refine the journal system with automatic templates.
-3. Take quality photos for the photogrammetry project.
+Yesterday, I experienced a sense of uselessness due to a lack of motivation for work, yet I still completed the task without any accompanying satisfaction. I took pride in developing the journaling system, showcasing years of accumulated skills. Despite creating this during company time, evening communications needed more support exchange. Noteworthy accomplishments included building the journaling system and preparing for the `12 uurs race` while deciding against furthering the photogrammetry project. I learned to use the open API, which will improve future productivity and absorbed an overload of information about traffic lights during the company party. Today, I aim to focus on a design task, delegate code review, attend an evening presentation, and plan for an upcoming summer camp while intending to obtain feedback on the new journal system.
 
 ## The questions
 
-1. How did I feel overall today? (Provide 3-5 adjectives)
+**Daily Reflections**
 
-2. What activities or moments made me feel proud of myself today?
+1. **Acknowledging Feelings:**
+   - What emotions did I experience today?
+   - Were there any triggers for these emotions?
+   - How could I have better managed them?
 
-3. Did I take time for myself and prioritize my needs, or did I find myself selflessly giving to others? Give an example.
+Today was a mixed day again.
 
-4. Reflecting on yesterday's action items:
-   - Did I finish the work ticket? How did that make me feel?
-   - Did I make any progress in refining the journal system? Describe it.
-   - Did I take quality photos for the photogrammetry project? How do I feel about them?
+I implemented the visual design that I wanted to do. Now, I'm waiting for feedback on it.
 
-5. What was something worthwhile I did today, no matter how small?
+I included my mother in doing some user testing on the application. She had some difficulties working with the program, which indicates that the program sucks. but it's nice to recognize that.
 
-6. What challenged me today, and how did I overcome or address it?
+I got a phone call from a colleague of mine that someone I worked with closely died. I am kind of silent sad about that. I'm not crying, but I'm saddened by it.
+He was the one who helped me find my way in my first real consulting job.
+He stood for what he thought was right, and he usually was.
+I tried to empathize with the colleague who called because they were friends. But I don't think I did a good job.
 
-7. How can I better embrace taking time for myself tomorrow?
+2. **Pride in Achievements:**
+   - What am I proud of today?
+   - How did I contribute meaningfully to my tasks?
+   - In what ways did I see my skills shine through?
 
-8. What one thing would I like to achieve tomorrow that will make me feel accomplished and proud?
+When I'm gaming with friends, I usually lag behind. Today, I asked for feedback and got it.
+This will make it that I'm better and thus my friend will complain less.
 
-9. What new thing did I learn or realize today about myself or my environment?
+Also, some of the documentation I read for work would result in nothing. But when I needed to implement threeway connections, I had all the puzzle pieces and could lay the puzzle in record time.
 
-10. End with a positive affirmation or a gratitude statement for something or someone in my life.
+3. **Balanced Self-Interest:**
+   - Did I experience moments where I put my own needs first?
+   - How did balancing self-interest and giving to others affect my well-being?
+   - Is there something I did today solely for my benefit?
+
+I don't think that I did anything selfish today.
+
+4. **Doing Something Worthwhile:**
+   - What worthwhile activity did I engage in today?
+   - How did this activity contribute to my personal or professional growth?
+   - Was this activity in line with my goals?
+
+I continued working on my LLM story writing, partly to write stories and learn new skills.
+
+5. **Learning and Growth:**
+   - What new thing did I learn today, either personally or professionally?
+   - How can this new knowledge or skill be applied in the future?
+   - Did I receive any feedback today? If so, how will I use it moving forward?
+
+See previous answers
+
+## What do I think about the tool
+If you include yesterday's summary in today's summary, they will mix and produce a mess.
+
+Also, there were not enough tokens to finish all the questions it had envisioned, so I increased that and made it limited the questions it allowed to ask.
