--- a/Journal/Daily/2024-06-17.md
+++ b/Journal/Daily/2024-06-17.md
@@ -4,7 +4,7 @@ tags:
 created: 2024-06-17
 auteur:
   - ChatGPT 4-o
-  - me
+  - Me
 ---
 ### Daily Evening Journal
 
@@ -12,22 +12,22 @@ auteur:
 
 **1. How do I feel right now?**  
 _Reflect on your current emotions._
-tired and unfulfilled
+Tired and unfulfilled
 
 **2. What made me feel this way today?**  
 _Identify specific events or moments._
-tiredness could be the result of staying up late.
+Tiredness could be the result of staying up late.
 
 The unfulfilledness is threefold.
 
 - I could not finish my work today because I kept running into bugs
 - My photogrammetry project of the oude gracht in Utrecht did not work
-    - it turns out you need quality photos instead of video
-- did little other things today
+    - It turns out you need quality photos instead of video
+- Did little other things today
 
 **3. One thing I'm proud of today:**  
 _Highlight an achievement or positive action._
-the abound of bugs I found and fixed in the work project
+The abound of bugs I found and fixed in the work project
 
 **4. A challenge I faced and how I handled it:**  
 _Briefly describe a challenge and your response._
@@ -36,12 +36,12 @@ I told my fellow scout leader I wanted to go to a festival, so I told them I wan
 **5. Something I learned or realized today:**  
 _Note any insights or lessons._
 
-- without tests, anything will become broken.
+- Without tests, anything will become broken.
 - I can take a break from scouting
-- scalpers will sell tickets for 100 euros over MSRP
+- Scalpers will sell tickets for 100 euros over MSRP
 
 **6. What am I looking forward to tomorrow?**  
 _End on a positive note with anticipation._
 
 - I finished my ticket
-- refining this journal system with automatic templates
+- Refining this journal system with automatic templates
