--- a/Journal/Daily/2024-06-18.md
+++ b/Journal/Daily/2024-06-18.md
@@ -3,7 +3,7 @@ tags:
   - Journal
 created: 2024-06-18
 auteur:
-  - me
+  - Me
   - ChatGPT 4-o
 ---
 
@@ -15,13 +15,16 @@ auteur:
 ## Summary of yesterday's entry
 
 Yesterday, I felt tired and unfulfilled due to staying up late and an accumulation of work-related frustrations. My unfulfilled feelings stemmed from three main issues:
-- persistent bugs preventing me from completing my tasks
-- a failed photogrammetry project due to using video instead of quality photos
-- lack of significant achievements throughout the day
+
+- Persistent bugs preventing me from completing my tasks
+- A failed photogrammetry project due to using video instead of quality photos
+- Lack of significant achievements throughout the day
+
 However, I took pride in the number of bugs I identified and fixed. A notable challenge was communicating my desire to attend a festival to my fellow scout leaders, who agreed they could manage in my absence. I realized the importance of thorough testing. I can take breaks from commitments, and I have observed the inflated prices of scalpers.
 I look forward to completing my ticket and refining my journal system with automatic templates tomorrow.
 
 **Action Items for Tomorrow:**
+
 1. Finish the work ticket.
 2. Refine the journal system with automatic templates.
 3. Take quality photos for the photogrammetry project.
@@ -33,7 +36,7 @@ I look forward to completing my ticket and refining my journal system with autom
 1. **Feelings Awareness:**
    - How did I feel today? Were there moments of feeling particularly good or bad?
    - Were there any specific triggers that influenced these feelings?
-I felt terrible today. I felt useless because I could not find the motivation to work. Or, more accurately, I found another thing more interesting. 
+I felt terrible today. I felt useless because I could not find the motivation to work. Or, more accurately, I found another thing more interesting.
 
 After completing the task, I felt nothing, no joy or pride, which is a bit concerning.
 
@@ -41,14 +44,14 @@ After completing the task, I felt nothing, no joy or pride, which is a bit conce
    - What am I proud of accomplishing today? What small or big victories can I celebrate?
    - Did I fix bugs, complete tasks, or face challenges head-on?
 
-I continued building this journaling system. which I put tougher in the morning. 
-I used years of skills to pull this off. 
+I continued building this journaling system. which I put tougher in the morning.
+I used years of skills to pull this off.
 I can be proud that I can make something I want.
 
 3. **Balancing Selflessness and Self-Interest:**
    - Did I make decisions today, prioritizing my needs without guilt?
    - Was there a moment where I felt I was successfully balancing self-care and self-giving?
-   - How did I communicate my wants or needs to others today? 
+   - How did I communicate my wants or needs to others today?
 
 I did most of the communication in the evening, but there was no give-and-take.
 
@@ -58,7 +61,7 @@ I did take something in creating the journal system in the morning during compan
    - What did I do today that felt worthwhile or fulfilling?
    - Did I progress on my work ticket, journal system, or photogrammetry project?
 
-I built the journal system, for which I will get a few days of enjoyment. 
+I built the journal system, for which I will get a few days of enjoyment.
 Which is another problem: how do I make this a habit instead of an action
 
 The work ticket is also ready for review.
@@ -74,8 +77,8 @@ One of the key takeaways from today was learning how to use the open API, a skil
 
 At the company party, I learned more about traffic lights than I ever wanted to know.
 
-
 **6. Looking Ahead:**
+
 - How can I better manage my time and energy tomorrow?
 - What tasks or goals do I want to prioritize?
 - Are there any potential challenges I foresee, and how can I prepare for them?
