--- a/projects/Iscout Better source/2016.md
+++ b/projects/Iscout Better source/2016.md
@@ -25,7 +25,7 @@ This link can help you: [https://iscoutgame.com/en/teams](https://iscoutgame.co
 
 ### Source improvement
 
-no
+No
 
 ---
 
@@ -108,7 +108,7 @@ Google: mac command key symbol
 ### Source improvement
 
 <https://www.gearpatrol.com/tech/a714999/apple-command-key-explained/>
-they were looking for `sweden` where the symbol is used to indicate tourist atractions.
+They were looking for `sweden` where the symbol is used to indicate tourist atractions.
 
 ---
 
@@ -140,7 +140,7 @@ We go to the end of the line where the x is located.
 
 ### Source improvement
 
-no new information was produced
+No new information was produced
 
 ---
 
@@ -169,7 +169,7 @@ It is clearly stated on the [Wikipedia page](https://en.wikipedia.org/wiki/Russi
 
 ### Note
 
-why is the English question so much harder?
+Why is the English question so much harder?
 
 ---
 
@@ -190,10 +190,10 @@ The dots in the image represent locations named batman.
 
 <https://geotargit.com/called.php?qcity=Batman>
 
-there are now a bit more things called batman
+There are now a bit more things called batman
 [overpass query](https://overpass-turbo.eu/map.html?Q=%5Bout%3Ajson%5D%5Btimeout%3A25%5D%3B%0A%28%0A++nwr%5B%22name%22%3D%22batman%22%5D%3B%0Anwr%5B%22name%22%3D%22Batman%22%5D%3B%0Anwr%5B%22name%3Aen%22%3D%22batman%22%5D%3B%0Anwr%5B%22name%3Aen%22%3D%22Batman%22%5D%3B%0A++%29%3B%0Aout+geom%3B)
 
-but it is only place names
+But it is only place names
 
 The 4 places pictured are:
 
@@ -202,7 +202,7 @@ The 4 places pictured are:
 - [Batman, Turkey](https://en.wikipedia.org/wiki/Batman,_Turkey) a big city in turkey not 321km from the village
 - And most likely [Batman, Iran](https://en.wikipedia.org/wiki/Batman,_Iran)
 
-with batman turkey being the right awnser.
+With batman turkey being the right awnser.
 
 ---
 
@@ -225,10 +225,12 @@ One of our heros made a map of the USA which you can use to figure out where you
 
 ### Source improvement
 
-its referencing [XKCD #1509: Scenery Cheat Sheet](https://xkcd.com/1509/)
+Its referencing [XKCD #1509: Scenery Cheat Sheet](https://xkcd.com/1509/)
 
-you can find it with:
+You can find it with:
+
 <https://www.google.nl/search?hl=nl&q=us+map+with+movie+backgrounds>
+
 ---
 
 ## Unicorn Poo
@@ -285,9 +287,9 @@ We go to the country which has the most of this
 
 ### Source improvement
 
-we were looking for the most peacefull country in the world
+We were looking for the most peacefull country in the world
 
-top 10 in 2015
+Top 10 in 2015
 
 1. Iceland
 2. Denmark
@@ -300,7 +302,7 @@ top 10 in 2015
 9. Australia
 10. Czech Republic
 
-top 10 in 2024
+Top 10 in 2024
 
 1. ICELAND
 2. DENMARK
@@ -313,7 +315,7 @@ top 10 in 2024
 9. JAPAN
 10. SWITZERLAND
 
-we might iobserve some changes in the list
+We might observe some changes in the list
 
 ---
 
@@ -337,7 +339,7 @@ The thing you did last year as hipster can be mainstream already. Sometimes you'
 
 ### Source improvement
 
-they were looking for the `STEÐJI BREWERY` witch is now closed.
+They were looking for the `STEÐJI BREWERY` witch is now closed.
 
 I've removed it from osm.
 
@@ -360,10 +362,10 @@ Its the flag
 
 ## Note
 
-did you know `Wow. tuocsi is the reverse of iscout!!!!1!` source: <https://tuoc.si/>
+Did you know `Wow. tuocsi is the reverse of iscout!!!!1!` source: <https://tuoc.si/>
 
-the short link redirects to
+The short link redirects to
 <http://four.flash-gear.com/npuz/puz.php?c=f&o=1&id=3981605&k=39072282&s=60&w=500&h=300>
-which has been lost to time
+Which has been lost to time
 
 ---
