--- a/Journal/Daily/2024-06-19.md
+++ b/Journal/Daily/2024-06-19.md
@@ -9,19 +9,22 @@ auteur:
 
 # Journal entry for 2024-06-19
 
-**What did you have for dinner?**: pancakes with bacon
-**Grade for the day**: 7
-
-## What did you do today?
-
-**Morning**: Making PR, made the threeway connections
-**Afternoon**: Mom user test, call with the colleague
-**After work**: worked on llm story writer
-**Evening**: gamed with friends
-
 ## Summary of yesterday's entry
 
 Yesterday, I experienced a sense of uselessness due to a lack of motivation for work, yet I still completed the task without any accompanying satisfaction. I took pride in developing the journaling system, showcasing years of accumulated skills. Despite creating this during company time, evening communications needed more support exchange. Noteworthy accomplishments included building the journaling system and preparing for the `12 uurs race` while deciding against furthering the photogrammetry project. I learned to use the open API, which will improve future productivity and absorbed an overload of information about traffic lights during the company party. Today, I aim to focus on a design task, delegate code review, attend an evening presentation, and plan for an upcoming summer camp while intending to obtain feedback on the new journal system.
+
+## What happened today?
+
+**What did you have for dinner?**: pancakes with bacon
+**Grade for the day**: 7
+
+### What did you do today?
+
+**Morning**: Making PR, made the threeway connections
+**Afternoon**: Mom user test, call with the colleague
+**After work**: worked on LLM story writer
+**Evening**: gamed with friends
+
 
 ## The questions
 
