--- a/Journal/Daily/2024-06-20.md
+++ b/Journal/Daily/2024-06-20.md
@@ -11,49 +11,51 @@ auteur:
 
 ## Summary of yesterday's entry
 
-I'm here to help! Please provide the contents of yesterday's journal entries that you would like summarized.
+Yesterday was a mixed day, starting with a significant stride in my project's visual design and the successful implementation of three-way connections, a task for which prior documentation proved invaluable. In the afternoon, I included my mother in a user test for the application, highlighting areas for improvement. I received saddening news about a former close colleague's passing, which left me feeling silent but deeply saddened. In the evening, I improved my gaming skills by asking friends for feedback and worked on my LLM story writer project, which contributed to my personal and professional growth. I had pancakes with bacon for dinner, and I rated the day a 7. Reflecting on the day, I noted that I didn't engage in selfish acts and acknowledged the need for better management of emotions and interpersonal empathy.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
+**What did you have for dinner**: Wrap filled with chicken burger
+**Grade for the day**: 5
 
 ### What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: I got the news that the project would not continue. and creating documentation for the project
+**Afternoon**: helped someone learning to react and learned something in the process
+**After work**: continued on the LLM storyteller using what I learned in the afternoon
+**Evening**: did some gaming
 
 ## The questions
 
-Here is the summary of yesterday's journal entry:
+1. **How did I feel throughout the day today?**
+   Detail the various emotions you experienced and what might have triggered them. 
+   Reflect on how these feelings influenced your actions and interactions.
 
-- Felt a bit overwhelmed at work but pushed through.
-- Helped a colleague finish their project, which took up a lot of time.
-- Didn't have much time for personal hobbies.
-- Felt proud of completing a challenging task but also exhausted.
-- Realized I haven't acknowledged my own needs as much lately.
+I'm sad that the project ended but glad that I now have clarity about the project's future.
 
-Here is a tailored journal template based on your goals and the summary you’ve provided.
+Also, I talked with some colleagues about the death of Marwijn. And from their reactions, I inferred I should be very sad about it. But I'm as sad as I'm supposed to be.
 
----
+2. **What am I proud of accomplishing today?**
+   Identify moments or achievements from today that made you feel proud. 
+   Whether big or small, what stands out as something you can celebrate yourself for?
 
-1. **Feelings Check-In**
-   - How did I feel throughout the day? Identify at least three emotions and describe what triggered them.
+I'm proud that I can help somebody react at an advanced level. he showed me a design pattern I had never seen before. I understood it immediately and could apply it in practice the same day.
 
-2. **Self-Pride Moment**
-   - What did I do today that I am proud of? 
+I did some gaming to improve, and I learned in one round and won a bout.
 
-3. **Ego Check**
-   - In what ways did I prioritize my own needs today? Did I set any boundaries or say "no" when necessary?
+3. **Did I take time for myself today and prioritize my needs?**
+   Reflect on any instances where you focused on your own needs or desires. 
+   What did you do solely for yourself, and how did it make you feel?
 
-4. **Worthwhile Endeavor**
-   - What did I do today that felt worthwhile or fulfilling? This could be related to work, hobbies, personal growth, or helping others.
+I positioned that helping the guy was learning for me. So, although I did a selfless act, I did benefit from it.
 
-5. **Reflective Balance**
-   - Did I strike a balance between helping others and taking care of myself today? If not, what can I do differently tomorrow to ensure I am caring for myself too?
+4. **What worthwhile activity did I engage in today?**
+   Describe an activity that made you feel like you spent your time meaningfully. Did this activity contribute to your personal or professional growth, and how?
 
----
+I put the lessons from yesterday into practice, and it made a difference. If I keep practicing, I could climb out of the bottom ranks of my friend group.
 
-Feel free
+
+5. **How did I manage my emotions and show empathy towards others today?**
+   Think about moments when you allowed yourself to feel fully and how you handled those emotions. Consider how you connected with others empathetically and note areas for improvement.
+
+I showed some emotions today but did not react well to the gathered attention.
